R10 JDK 17 降级：release 17 与 SequencedCollection API 兼容替换
- maven.compiler.release 21→17（langchain4j 1.19.0 最低要求 17，17 即底线）
- getFirst/getLast（Java 21 独有 SequencedCollection）58 处替换为 get(0)/get(size-1)；Comparator.reversed() 属 Java8 API 未误伤
- 交叉编译验证（javac --release 17 拒绝 21 专属 API），字节码 major version 61

Co-Authored-By: Claude Code <noreply@anthropic.com>